--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,30 @@
 </head>
 
 <body>
-Lol heippa maailma tultiin tekeen kahavia :))
+
+<script type='text/javascript' src='http://code.jquery.com/jquery-1.8.2.js'></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#nappi").click(function() {
+                    var input_string = $("#forminput").val();
+                    $.ajax({
+                        url : "/on/",
+                        type : "POST",
+                        dataType: "json",
+                        data : {
+                            client_response : input_string,
+                            csrfmiddlewaretoken: '{{ csrf_token }}'
+                            }
+                    });
+                    return false;
+            });
+        });
+</script>
+<form method="post" name="example form" >
+        {% csrf_token %}
+        <input name="example" id="forminput" type="text">
+        <input id="nappi" type="button" value="Vilkuta lediä"></input>
+</form>
+<div id="result">
 </body>
 </html>
