--- a/static/insta/style.css
+++ b/static/insta/style.css
@@ -82,3 +82,9 @@ input.cmn-toggle-round-flat:checked + label:after {
   margin-left: 60px;
   background-color: #8ce196;
 }
+
+.switch-wrapper {
+  display: inline-block;
+  position: relative;
+  top: 3px;
+}
