--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,14 @@ $(document).ready(function() {
             </div>
             </center>
 
-            <p class="palatino">Start Time</p>
+            <p class="palatino">Start Timer</p>
+	    <center>
+            <div class="switch">
+            <input name="start_timer" id="start_timer" class="cmn-toggle cmn-toggle-round-flat" type="checkbox">
+            <label for="power">Start Timer</label>
+            </div>
+            </center>
+
             <p class="palatino">Shutdown Timer</p>
             <p class="palatino">Tweet when coffee is ready</p>
         </div>
