--- a/static/insta/style.css
+++ b/static/insta/style.css
@@ -7,8 +7,9 @@ div.wrapper {
 }
 
 div.leftcol {
-    width: 468px;
-    height: 789px;
+    width: 535px;
+    height: 900px;
+    background-size: cover;
     background-image: url("images/vasen_palkki.png");
     display: inline-block;
     vertical-align: top;
@@ -16,8 +17,9 @@ div.leftcol {
 
 div.rightcol {
     background-image: url("images/oikea_palkki.png");
-    width: 344px;
-    height: 273px;
+    background-size: cover;
+    width: 500px;
+    height: 400px;
     display: inline-block;
     vertical-align: top;
 }
@@ -81,4 +83,44 @@ input.cmn-toggle-round-flat:checked + label {
 input.cmn-toggle-round-flat:checked + label:after {
   margin-left: 60px;
   background-color: #8ce196;
+}
+
+.textbox {
+    padding: 1px 20px;
+    border: 0;
+    height: 40px;
+    width: 150px;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    box-shadow: 1px 1px 0 0 #FFF, 5px 5px 40px 2px #BBB inset;
+    -moz-box-shadow: 1px 1px 0 0 #FFF, 5px 5px 40px 2px #BBB inset;
+    -webkit-box-shadow: 1px 1px 0 0 #FFF, 5px 5px 40px 2px #BBB inset;
+    -webkit-background-clip: padding-box;
+    outline: 0;
+}
+
+input {
+    font-size: 30px;
+    text-align: center;
+}
+
+.led {
+    margin: 20px auto;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.25);
+    box-shadow: #000 0 -1px 6px 1px;
+}
+
+.led-red {
+    background-color: #F00;
+    box-shadow: #000 0 -1px 6px 1px, inset #600 0 -1px 8px, #F00 0 3px 11px;
+}
+
+
+.led-green {
+    background-color: #80FF00;
+    box-shadow: #000 0 -1px 6px 1px, inset #460 0 -1px 8px, #80FF00 0 3px 11px;
 }
