--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
 <script type="text/javascript">
 
 $(document).ready(function() {
+			$('#presence_green').hide()
+			$('#ready_green').hide()
+			
             $('#power').change(function() {
                 var control_str
                 if($(this).is(":checked")) {
@@ -84,6 +87,7 @@ $(document).ready(function() {
                 var control_str
                 if($(this).is(":checked")) {
                     control_str = "tweet_switch_on";
+					
 
                 } else {
                     control_str = "tweet_switch_off";
@@ -107,12 +111,10 @@ $(document).ready(function() {
 
 // The loop is used to send the data from the text boxes every second
 var interval = 1000;  // 1000 = 1 second
-function repeat() {
+function repeat_post() {
     var control_str =  "start_time: " + document.getElementById('start_time_textbox').value + "\nshutdown_timer: " +document.getElementById('shutdown_timer_textbox').value;
 
     $.ajax({
-
-
             type: 'POST',
             url: '/',
             data : {
@@ -125,12 +127,28 @@ function repeat() {
             },
             complete: function (data) {
                     // Schedule the next
-                    setTimeout(repeat, interval);
+                    setTimeout(repeat_post, interval);
             }
 
     });
 }
-setTimeout(repeat, interval);
+function repeat_get() {
+	str = "false"
+	$.get('/presence/', {presence: str}, function(data){
+				if(data == "true") {
+                    $('#presence_green').show()
+					$('#presence_red').hide()
+
+                } else {
+                    $('#presence_green').hide()
+					$('#presence_red').show()
+                }
+               setTimeout(repeat_get, interval);
+           });
+};
+
+setTimeout(repeat_get, interval);
+setTimeout(repeat_post, interval);
 
 </script>
 
@@ -187,11 +205,12 @@ setTimeout(repeat, interval);
 
         <div class="rightcol">
             <p class="palatino">Coffee pan present</p>
-            <div class="led led-red"></div>
+			<div class="led led-green" id="presence_green"></div>
+			<div class="led led-red" id = "presence_red"></div>
 
-
-            <p class="palatino">Coffee is ready in {{ message }}</p>
-            <div class="led led-green"></div>
+            <p class="palatino">Coffee is ready</p>			
+            <div class="led led-green" id="ready_green"></div>
+			<div class="led led-red" id="ready_red"></div>
         </div>
 
     </div>
